# RWKV6_Keras_Operator

./: LICENSE  README.md  pyproject.toml
src/keras_rwkv6_operator/: ops_rwkv_kernel.py
src/keras_rwkv6_operator/jax_kernel/: rwkv_kernels.cu
src/keras_rwkv6_operator/torch_kernel/: wkv6_op.cpp
src/rwkv6_keras_operator/: __init__.py  jax_rwkv_kernel.py  torch_rwkv_kernel.py
src/rwkv6_keras_operator/jax_kernel/: rwkv_kernels.hip
src/rwkv6_keras_operator/jax_kernel_hip/: gpu_ops.cpp  kernels.h  rwkv_kernels.hip
src/rwkv6_keras_operator/torch_kernel/: wkv6_cuda.cu
