[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"

[project]
name = "rwkv6-keras-operator"

version = "1.0.4"
authors = [
    { name = "soyamilk", email = "soyamilk1997@163.com" },
	{ name = "pass-lin", email = "qw_lin@qq.com" },
	{ name = "szxy", email= "szxysdt@outlook.com"},
	{ name = "Beortust", email= "Beortust@outlook.com"},
	{ name = "itoos", email= "2948395900@qq.com"},
	{ name = "zoulion", email= "zoulion@126.com"}
]
description = "A rwkv6 operator based on Keras3 which support JAX(CUDA)、Pytorch(CUDA)、Tensorflow(NATIVE)."

readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"keras>=3.4"
]


[tool.hatch.build.targets.wheel]
packages = ["src/rwkv6_keras_operator"]


[project.urls]
"Homepage" = "https://github.com/infiy-quine/RWKV6_Keras_Operator"
